stop scrollbars overlaying on the count

--- a/src/skins/vector/css/vector-web/structures/RoomDirectory.css
+++ b/src/skins/vector/css/vector-web/structures/RoomDirectory.css
@@ -116,6 +116,7 @@ limitations under the License.
 .mx_RoomDirectory_roomMemberCount {
     text-align: right;
     width: 100px;
+    padding-right: 10px;
 }
 
 .mx_RoomDirectory_table tr {
